# PhaseCorrector

./: .gitignore  CMakeLists.txt  PhaseCorrector.jucer
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
TestCurves/: allpass_simulation.csv  linear_phase_shift.csv
